--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kavea Tweaks - PC Optimization</title>
+    <title>KaveaTweaks.xyz - PC Optimization</title>
     <link rel="icon" type="image/x-icon" href="kavea.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -1057,9 +1057,9 @@
     <!-- Loading Screen -->
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-logo">
-            <img src="kavea.png" alt="Kavea Tweaks Logo" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
+            <img src="kavea.png" alt="KaveaTweaks.xyz Logo" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
         </div>
-        <div class="loading-text">Loading Kavea Tweaks...</div>
+        <div class="loading-text">Loading KaveaTweaks.xyz...</div>
         <div class="loading-bar">
             <div class="loading-progress" id="loadingProgress"></div>
         </div>
@@ -1075,8 +1075,8 @@
         <div class="container">
             <div class="header-content">
                 <a class="logo" href="#" onclick="showPage('home')">
-                    <img src="kavea.png" alt="Kavea Tweaks Logo" class="logo-img">
-                    Kavea <span>Tweaks</span>
+                    <img src="kavea.png" alt="KaveaTweaks.xyz Logo" class="logo-img">
+                    KaveaTweaks.xyz
                 </a>
                 <nav>
                     <ul>
@@ -1098,8 +1098,8 @@
             <section class="hero">
                 <div class="container">
                     <h1>The Ultimate PC Optimization Solution</h1>
-                    <p>Experience unparalleled performance and optimization with Kavea Tweaks. Completely free, regularly updated, and trusted by thousands of users worldwide.</p>
-                    <a href="#" onclick="showPage('downloads')" class="btn">Download Kavea Tweaks</a>
+                    <p>Experience unparalleled performance and optimization with KaveaTweaks.xyz. Completely free, regularly updated, and trusted by thousands of users worldwide.</p>
+                    <a href="#" onclick="showPage('downloads')" class="btn">Download KaveaTweaks.xyz</a>
                 </div>
             </section>
 
@@ -1107,7 +1107,7 @@
             <section class="features">
                 <div class="container">
                     <div class="features-container">
-                        <h2 class="section-title">Why Choose Kavea Tweaks?</h2>
+                        <h2 class="section-title">Why Choose KaveaTweaks.xyz?</h2>
                         <div class="features-grid">
                             <div class="feature-card">
                                 <div class="feature-icon">
@@ -1232,7 +1232,7 @@
                 <div class="container">
                     <div class="donation-container">
                         <h2>Support Our Work</h2>
-                        <p>If you enjoy using Kavea Tweaks and want to support future development, consider making a donation. Your contribution helps us continue providing free tweaks and developing new features.</p>
+                        <p>If you enjoy using KaveaTweaks.xyz and want to support future development, consider making a donation. Your contribution helps us continue providing free tweaks and developing new features.</p>
 
                         <div class="crypto-address">
                             <p>Send Litecoin (LTC) to:</p>
@@ -1257,7 +1257,7 @@
             <!-- Premium Hero Section -->
             <section class="premium-hero">
                 <div class="container">
-                    <h1>Premium Kavea Tweaks</h1>
+                    <h1>Premium KaveaTweaks.xyz</h1>
                     <p>Unlock better FPS, reduced input delay, and exclusive performance features</p>
                     <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn-premium">Purchase on Discord</a>
                 </div>
@@ -1504,7 +1504,7 @@
 
                 <div class="downloads-content">
                     <div class="download-card">
-                        <h3>Kavea Tweaks Free</h3>
+                        <h3>KaveaTweaks.xyz Free</h3>
                         <p>Our powerful system optimization tweak for enhanced performance and stability. Completely free and regularly updated.</p>
                         <div class="version-info">
                             <span>Version: 2.1.0</span>
@@ -1515,7 +1515,7 @@
 
                     <div class="key-info">
                         <h4>Activation Key</h4>
-                        <p>After downloading, use the following key to activate your free version of Kavea Tweaks:</p>
+                        <p>After downloading, use the following key to activate your free version of KaveaTweaks.xyz:</p>
                         <div class="key-box">KaveaFreeTweak</div>
                         <p>Copy this key and paste it when prompted during the installation process.</p>
                     </div>
@@ -1523,9 +1523,9 @@
 
                 <div class="support-section" style="margin-top: 80px;">
                     <h2>Installation Guide</h2>
-                    <p>Follow these steps to install Kavea Tweaks:</p>
+                    <p>Follow these steps to install KaveaTweaks.xyz:</p>
                     <ol style="color: #ccc; margin-left: 20px; font-size: 18px; line-height: 1.8;">
-                        <li>Download the Kavea Tweaks file from the link above</li>
+                        <li>Download the KaveaTweaks.xyz file from the link above</li>
                         <li>Extract the ZIP file to your desired location</li>
                         <li>Run the installer as Administrator</li>
                         <li>When prompted, enter the activation key: <strong>KaveaFreeTweak</strong></li>
@@ -1551,30 +1551,30 @@
                         <h2>Frequently Asked Questions</h2>
 
                         <div class="faq-item">
-                            <div class="faq-question">How do I install Kavea Tweaks?</div>
+                            <div class="faq-question">How do I install KaveaTweaks.xyz?</div>
                             <div class="faq-answer">
                                 Download the installer from our Downloads page, run it as Administrator, and follow the on-screen instructions. When prompted, enter the activation key: <strong>KaveaFreeTweak</strong>. A system restart may be required for changes to take effect.
                             </div>
                         </div>
 
                         <div class="faq-item">
-                            <div class="faq-question">Is Kavea Tweaks safe to use?</div>
+                            <div class="faq-question">Is KaveaTweaks.xyz safe to use?</div>
                             <div class="faq-answer">
-                                Yes, Kavea Tweaks is completely safe. We do not collect any personal data and all optimizations are reversible. Our tweaks are regularly tested for stability and security.
+                                Yes, KaveaTweaks.xyz is completely safe. We do not collect any personal data and all optimizations are reversible. Our tweaks are regularly tested for stability and security.
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <div class="faq-question">Will this work on my system?</div>
                             <div class="faq-answer">
-                                Kavea Tweaks is compatible with Windows 10 and Windows 11. We recommend checking the system requirements on the download page for specific version compatibility.
+                                KaveaTweaks.xyz is compatible with Windows 10 and Windows 11. We recommend checking the system requirements on the download page for specific version compatibility.
                             </div>
                         </div>
 
                         <div class="faq-item">
                             <div class="faq-question">How can I revert changes?</div>
                             <div class="faq-answer">
-                                You can use the built-in restore feature in Kavea Tweaks or reinstall the tweak to reset all settings to default. All changes are designed to be non-destructive.
+                                You can use the built-in restore feature in KaveaTweaks.xyz or reinstall the tweak to reset all settings to default. All changes are designed to be non-destructive.
                             </div>
                         </div>
 
@@ -1615,7 +1615,7 @@
             <section class="hero">
                 <div class="container">
                     <h1>Join Our Discord Community</h1>
-                    <p>Connect with thousands of users, get instant support, and stay updated with the latest news and updates from Kavea Tweaks.</p>
+                    <p>Connect with thousands of users, get instant support, and stay updated with the latest news and updates from KaveaTweaks.xyz.</p>
                     <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="discord-btn">
                         <i class="fab fa-discord"></i> Join Our Discord
                     </a>
@@ -1647,7 +1647,7 @@
                                     <i class="fas fa-users"></i>
                                 </div>
                                 <h3>Community Driven</h3>
-                                <p>Share your experiences, suggest features, and connect with other Kavea Tweaks users.</p>
+                                <p>Share your experiences, suggest features, and connect with other KaveaTweaks.xyz users.</p>
                             </div>
                         </div>
                     </div>
@@ -1734,7 +1734,7 @@
                             <div class="premium-feature">
                                 <i class="fas fa-lightbulb"></i>
                                 <h3>Feature Requests</h3>
-                                <p>Suggest new features and vote on upcoming developments for Kavea Tweaks.</p>
+                                <p>Suggest new features and vote on upcoming developments for KaveaTweaks.xyz.</p>
                             </div>
                             <div class="premium-feature">
                                 <i class="fas fa-code-branch"></i>
@@ -1751,7 +1751,7 @@
                 <div class="container">
                     <div class="donation-container">
                         <h2>Support Our Community</h2>
-                        <p>If you enjoy using Kavea Tweaks and want to support future development, consider making a donation. Your contribution helps us continue providing free tweaks and developing new features.</p>
+                        <p>If you enjoy using KaveaTweaks.xyz and want to support future development, consider making a donation. Your contribution helps us continue providing free tweaks and developing new features.</p>
 
                         <div class="crypto-address">
                             <p>Send Litecoin (LTC) to:</p>
@@ -1775,7 +1775,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Kavea Tweaks</h3>
+                    <h3>KaveaTweaks.xyz</h3>
                     <p>Professional PC optimization software</p>
                 </div>
                 <div class="footer-column">
@@ -1798,7 +1798,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Kavea Tweaks. All rights reserved.</p>
+                <p>&copy; 2023 KaveaTweaks.xyz. All rights reserved.</p>
             </div>
         </div>
     </footer>
