--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KaveaTweaks.xyz - PC Optimization</title>
+    <title>Kaveatweaks.xyz - PC Optimization</title>
     <link rel="icon" type="image/x-icon" href="kavea.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -1063,7 +1063,7 @@
     <!-- Loading Screen -->
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-logo">
-            <img src="kavea.png" alt="KaveaTweaks.xyz Logo" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
+            <img src="kavea.png" alt="Kavea Tweaks Logo" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
         </div>
         <div class="loading-text">Loading KaveaTweaks.xyz...</div>
         <div class="loading-bar">
@@ -1071,10 +1071,11 @@
         </div>
     </div>
 
-    <!-- Announcement Bar -->
-    <div class="announcement-bar" id="announcement">
-        Premium Tweaker almost Done :)
-    </div>
+    <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" rel="noopener noreferrer">
+        <div class="announcement-bar" id="announcement">
+            Join Our Discord Today :)
+        </div>
+    </a>
 
     <!-- Header -->
     <header id="navbar">
@@ -1082,7 +1083,7 @@
             <div class="header-content">
                 <a class="logo" onclick="showPage('home')">
                     <img src="kavea.png" alt="KaveaTweaks.xyz Logo" class="logo-img">
-                    KaveaTweaks.xyz
+                    Kavea Tweaks
                 </a>
                 <nav>
                     <ul>
@@ -1104,8 +1105,8 @@
             <section class="hero">
                 <div class="container">
                     <h1>The Ultimate PC Optimization Solution</h1>
-                    <p>Experience unparalleled performance and optimization with KaveaTweaks.xyz. Completely free, regularly updated, and trusted by thousands of users worldwide.</p>
-                    <a onclick="showPage('downloads')" class="btn">Download KaveaTweaks.xyz</a>
+                    <p>Experience unparalleled performance and optimization with Kavea Tweak. Completely free, regularly updated, and trusted by thousands of users worldwide.</p>
+                    <a onclick="showPage('downloads')" class="btn">Download Kavea Tweak</a>
                 </div>
             </section>
 
@@ -1238,7 +1239,7 @@
                 <div class="container">
                     <div class="donation-container">
                         <h2>Support Our Work</h2>
-                        <p>If you enjoy using KaveaTweaks.xyz and want to support future development, consider making a donation. Your contribution helps us continue providing free tweaks and developing new features.</p>
+                        <p>If you enjoy using Kavea Tweaks and want to support future development, consider making a donation. Your contribution helps us continue providing free tweaks and developing new features.</p>
 
                         <div class="crypto-address">
                             <p>Send Litecoin (LTC) to:</p>
@@ -1263,7 +1264,7 @@
             <!-- Premium Hero Section -->
             <section class="premium-hero">
                 <div class="container">
-                    <h1>Premium KaveaTweaks.xyz</h1>
+                    <h1>Premium Kavea Tweaks</h1>
                     <p>Unlock better FPS, reduced input delay, and exclusive performance features</p>
                     <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn-premium">Purchase on Discord</a>
                 </div>
@@ -1510,7 +1511,7 @@
 
                 <div class="downloads-content">
                     <div class="download-card">
-                        <h3>KaveaTweaks.xyz Free</h3>
+                        <h3>Kavea Tweak Free</h3>
                         <p>Our powerful system optimization tweak for enhanced performance and stability. Completely free and regularly updated.</p>
                         <div class="version-info">
                             <span>Version: 2.1.0</span>
@@ -1798,13 +1799,11 @@
                     <h3>Connect</h3>
                     <div class="social-links">
                         <a href="https://discord.com/invite/FxenQbsuAM" target="_blank"><i class="fab fa-discord"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 KaveaTweaks.xyz. All rights reserved.</p>
+                <p>&copy; 2025 KaveaTweaks.xyz. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -1840,14 +1839,24 @@
             };
             document.title = pageTitles[pageId] || 'KaveaTweaks.xyz - PC Optimization';
 
+            // Save current page to localStorage
+            localStorage.setItem('currentPage', pageId);
+
             // Scroll to top
             window.scrollTo(0, 0);
         }
 
-        // Initial page load - show home page
+        // Initial page load - check for saved page or show home page
         document.addEventListener('DOMContentLoaded', function() {
-            // Show home page by default
-            showPage('home');
+            // Check if there's a saved page in localStorage
+            const savedPage = localStorage.getItem('currentPage');
+            
+            // Show saved page or home page by default
+            if (savedPage && document.getElementById(savedPage)) {
+                showPage(savedPage);
+            } else {
+                showPage('home');
+            }
 
             // Scroll to top
             window.scrollTo(0, 0);
