--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
             <section class="features">
                 <div class="container">
                     <div class="features-container">
-                        <h2 class="section-title">Why Choose KaveaTweaks.xyz?</h2>
+                        <h2 class="section-title">Why Choose Kavea Tweaks ?</h2>
                         <div class="features-grid">
                             <div class="feature-card">
                                 <div class="feature-icon">
