--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
                                 <img src="profile.png" alt="Developer Profile Picture" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
                             </div>
                             <div class="member-info">
-                                <h2>the.allium</h2>
+                                <h2>Allium</h2>
                                 <div class="member-role">Founder & Lead Developer</div>
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
                                 <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
@@ -1197,7 +1197,7 @@
                                 <div class="member-role">Community Manager & Support</div>
                                 <p class="member-bio">Dedicated to helping users get the most out of our software. Always available to answer your questions.</p>
                                 <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
-                                    <i class="fab fa-discord"></i> matti_main_plug
+                                    <i class="fab fa-discord"></i> MakaKnacker.69
                                 </a>
                             </div>
                         </div>
@@ -1952,4 +1952,5 @@
     </script>
 </body>
 </html>
+
 
