--- a/index.html
+++ b/index.html
@@ -1315,6 +1315,21 @@
                                 </a>
                             </div>
                         </div>
+
+                        <div class="team-member">
+                            <div class="member-avatar">
+                                <!-- Profile picture -->
+                                <img src="maka.png" alt="MakaKnacker Profile Picture" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>M</div>';">
+                            </div>
+                            <div class="member-info">
+                                <h2>MakaKnacker</h2>
+                                <div class="member-role">Community Manager & Support</div>
+                                <p class="member-bio">Dedicated to helping users get the most out of our software. Always available to answer your questions.</p>
+                                <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
+                                    <i class="fab fa-discord"></i> matti_main_plug
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -1868,6 +1883,21 @@
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
                                 <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
                                     <i class="fab fa-discord"></i> the.allium
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="team-member">
+                            <div class="member-avatar">
+                                <!-- Profile picture -->
+                                <img src="maka.png" alt="MakaKnacker Profile Picture" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>M</div>';">
+                            </div>
+                            <div class="member-info">
+                                <h2>MakaKnacker</h2>
+                                <div class="member-role">Community Manager & Support</div>
+                                <p class="member-bio">Dedicated to helping users get the most out of our software. Always available to answer your questions.</p>
+                                <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
+                                    <i class="fab fa-discord"></i> matti_main_plug
                                 </a>
                             </div>
                         </div>
