--- a/index.html
+++ b/index.html
@@ -1307,11 +1307,11 @@
                                 <img src="profile.png" alt="Developer Profile Picture" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
                             </div>
                             <div class="member-info">
-                                <h2>the.allium</h2>
+                                <h2>Allium</h2>
                                 <div class="member-role">Founder & Lead Developer</div>
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
                                 <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
-                                    <i class="fab fa-discord"></i> the.allium
+                                    <i class="fab fa-discord"></i> aiiium
                                 </a>
                             </div>
                         </div>
@@ -2133,3 +2133,4 @@
     </script>
 </body>
 </html>
+
