--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaveatweaks.xyz - PC Optimization</title>
+    <meta name="description" content="Professional PC optimization software for enhanced performance, better FPS, and reduced input delay. Free and premium versions available.">
     <link rel="icon" type="image/x-icon" href="kavea.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -22,8 +23,6 @@
             background-color: #000;
             color: #fff;
             line-height: 1.6;
-            overflow-x: hidden;
-            width: 100%;
             overflow-x: hidden;
         }
 
@@ -1074,6 +1073,29 @@
             transform: translateY(-2px);
         }
 
+        /* Legal Notice */
+        .legal-notice {
+            background-color: #000;
+            padding: 20px;
+            border-radius: 10px;
+            border: 1px solid #333;
+            margin: 30px 0;
+            text-align: left;
+        }
+
+        .legal-notice h4 {
+            color: #a24ae2;
+            margin-bottom: 15px;
+            font-size: 18px;
+        }
+
+        .legal-notice p {
+            color: #ccc;
+            font-size: 14px;
+            line-height: 1.6;
+            margin-bottom: 10px;
+        }
+
         /* Responsive */
         @media (max-width: 1200px) {
             .pricing-grid {
@@ -1311,7 +1333,7 @@
                                 <div class="member-role">Founder & Lead Developer</div>
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
                                 <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
-                                    <i class="fab fa-discord"></i> aiiium
+                                    <i class="fab fa-discord"></i> 9v2p
                                 </a>
                             </div>
                         </div>
@@ -1863,11 +1885,11 @@
                                 <img src="profile.png" alt="Developer Profile Picture" onerror="this.style.display='none'; this.parentNode.innerHTML='<div style=\'width: 100%; height: 100%; background: linear-gradient(135deg, #a24ae2, #8a3ac8); display: flex; align-items: center; justify-content: center; color: white; font-weight: bold;\'>K</div>';">
                             </div>
                             <div class="member-info">
-                                <h2>the.allium</h2>
+                                <h2>9v2p</h2>
                                 <div class="member-role">Founder & Lead Developer</div>
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
                                 <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
-                                    <i class="fab fa-discord"></i> the.allium
+                                    <i class="fab fa-discord"></i> 9v2p
                                 </a>
                             </div>
                         </div>
@@ -2095,11 +2117,13 @@
             lastScrollTop = scrollTop;
         });
 
-        // Right-click protection
+        // Right-click protection (commented out for better UX)
+        /*
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
             return false;
         });
+        */
     </script>
 </body>
 </html>
