--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@
         </div>
     </div>
 
-    <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" rel="noopener noreferrer">
+    <a href="https://discord.gg/cVsqSVmqAz" target="_blank" rel="noopener noreferrer">
         <div class="announcement-bar" id="announcement">
             Join Our Discord Today :)
         </div>
@@ -1332,7 +1332,7 @@
                                 <h2>6s3z</h2>
                                 <div class="member-role">Founder & Lead Developer</div>
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
-                                <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
+                                <a href="https://discord.gg/cVsqSVmqAz" class="discord-handle" target="_blank">
                                     <i class="fab fa-discord"></i> 6s3z
                                 </a>
                             </div>
@@ -1380,7 +1380,7 @@
                         <div class="crypto-address">
                             <p>Send Litecoin (LTC) to:</p>
                             <div class="address-box">
-                                <span class="address-text" id="ltc-address">LZudQowQwUSUNBLjrAnYAAQsUj4DEhsTqg</span>
+                                <span class="address-text" id="ltc-address">LXZan4h5BeUBruMHondorULxCKY3NnEBWV</span>
                                 <button class="copy-btn" id="copy-ltc">
                                     <i class="far fa-copy"></i> Copy Address
                                 </button>
@@ -1402,7 +1402,7 @@
                 <div class="container">
                     <h1>Premium Kavea Tweaks</h1>
                     <p>Unlock better FPS, reduced input delay, and exclusive performance features</p>
-                    <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn-premium">Purchase on Discord</a>
+                    <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="btn-premium">Purchase on Discord</a>
                 </div>
             </section>
 
@@ -1449,7 +1449,7 @@
                                 </div>
                                 
                                 <!-- Smaller button -->
-                                <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn-showcase">
+                                <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="btn-showcase">
                                     Get Kavea Basic Now
                                 </a>
                             </div>
@@ -1562,7 +1562,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn-premium" style="width: 100%; display: block; text-align: center;">Get Basic</a>
+                            <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="btn-premium" style="width: 100%; display: block; text-align: center;">Get Basic</a>
                         </div>
 
                         <!-- Premium Tier (Right) -->
@@ -1613,7 +1613,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn" style="width: 100%; display: block; text-align: center;">Get Premium</a>
+                            <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="btn" style="width: 100%; display: block; text-align: center;">Get Premium</a>
                         </div>
                     </div>
                 </div>
@@ -1793,7 +1793,7 @@
                         <p>If you need further assistance, you can reach us through the following channels:</p>
 
                         <div style="margin-top: 30px;">
-                            <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn" style="width: 100%; display: block; text-align: center;">
+                            <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="btn" style="width: 100%; display: block; text-align: center;">
                                 <i class="fab fa-discord"></i> Discord Server
                             </a>
                         </div>
@@ -1811,7 +1811,7 @@
                 <div class="container">
                     <h1>Join Our Discord Community</h1>
                     <p>Connect with thousands of users, get instant support, and stay updated with the latest news and updates from KaveaTweaks.xyz.</p>
-                    <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="discord-btn">
+                    <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="discord-btn">
                         <i class="fab fa-discord"></i> Join Our Discord
                     </a>
                 </div>
@@ -1888,7 +1888,7 @@
                                 <h2>6s3z</h2>
                                 <div class="member-role">Founder & Lead Developer</div>
                                 <p class="member-bio">Passionate about creating high-performance software solutions. With 5+ years of experience in system optimization.</p>
-                                <a href="https://discord.com/invite/FxenQbsuAM" class="discord-handle" target="_blank">
+                                <a href="https://discord.gg/cVsqSVmqAz" class="discord-handle" target="_blank">
                                     <i class="fab fa-discord"></i> 6s3z
                                 </a>
                             </div>
@@ -1903,7 +1903,7 @@
                     <div class="premium-content">
                         <h2>Get Premium Support</h2>
                         <p>Join our Discord to get access to premium support channels and faster response times from our development team.</p>
-                        <a href="https://discord.com/invite/FxenQbsuAM" target="_blank" class="btn" style="width: 100%; display: block; text-align: center;">Join Discord for Support</a>
+                        <a href="https://discord.gg/cVsqSVmqAz" target="_blank" class="btn" style="width: 100%; display: block; text-align: center;">Join Discord for Support</a>
 
                         <div class="premium-features">
                             <div class="premium-feature">
@@ -1971,7 +1971,7 @@
                 <div class="footer-column">
                     <h3>Connect</h3>
                     <div class="social-links">
-                        <a href="https://discord.com/invite/FxenQbsuAM" target="_blank"><i class="fab fa-discord"></i></a>
+                        <a href="https://discord.gg/cVsqSVmqAz" target="_blank"><i class="fab fa-discord"></i></a>
                     </div>
                 </div>
             </div>
@@ -2127,4 +2127,3 @@
     </script>
 </body>
 </html>
-
